css/style.css
@font-face {
  font-family: "Bebas Neue";
  src: local("Bebas Neue"), local("Bebas-Neue-Regular"),
    url("../fonts/BebasNeueRegular.woff") format("woff");
  font-weight: 400;
  font-style: normal;
}

* {
  box-sizing: border-box;
}

html {
  font-size: 16px;
}

body {
  font-family: "Noto Sans", sans-serif;
}

h2 {
  font-size: 3.75rem;
  line-height: 1.2;
  font-weight: 400;
}

h3 {
  font-weight: 400;
  font-size: 1.75rem;
  line-height: 1.6;
}

p {
  font-size: 1rem;
  line-height: 1.6;
}

.content {
  max-width: 90rem;
  width: 100%;
  margin: auto;
}

.button {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 1.5625rem 3.75rem;
  background-color: rgb(92, 142, 230);
  border: none;
  color: #fff;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.6;
  letter-spacing: 0.35px;
  cursor: pointer;
}

.separator {
  max-width: 9.375rem;
  height: 2px;
  background-color: rgb(92, 142, 230);
}

/* Header */
header {
  padding-top: 5.875rem;
}

.header-image {
  background-image: url("../img/main_img.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  position: relative;
}

.header-image::before {
  content: "";
  position: absolute;
  z-index: 0;

  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(41, 45, 51, 0.6);
}

.navbar {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 2;
  display: flex;
  align-items: center;
  width: 100%;
  color: #fff;
  border-bottom: 1px solid rgba(235, 235, 240, 0.2);
  transition: background-color 0.2s, color 0.2s;
}

.navbar-light {
  background-color: rgb(250, 251, 252);
  border-color: rgb(235, 235, 240);
  color: rgb(41, 45, 51);
}

.navbar-light .header-logo {
  border-color: rgb(235, 235, 240);
  padding-top: 0.9375rem;
  padding-bottom: 0.9375rem;
}

.header-logo {
  padding: 1.4375rem 3.125rem;
  border-right: 1px solid rgba(235, 235, 240, 0.2);
  transition: padding 0.2s;
}

.navbar-logo {
  width: 8.75rem;
  height: 2.75rem;
}

.header-logo .logo-light {
  display: block;
}

.header-logo .logo-dark {
  display: none;
}

.navbar-light .header-logo .logo-light {
  display: none;
}

.navbar-light .header-logo .logo-dark {
  display: block;
}

.header-nav {
  display: flex;
  align-items: center;
  flex-basis: 100%;
  list-style: none;
  padding: 0;
  margin: 0 1.25rem 0 3.125rem;
}

.header-nav-item:not(:last-child) {
  margin-right: 3.125rem;
}

.header-nav-link {
  font-weight: 300;
  font-size: 1rem;
  letter-spacing: 0.49px;
  color: inherit;
  text-decoration: none;
}

.header-phone {
  display: flex;
  align-items: center;
  gap: 10px;
  flex-shrink: 0;
  margin-right: 3.125rem;
}

.phone-icon {
  fill: #5c8ee6;
}

.header-phone-link {
  color: inherit;
  text-decoration: none;
}

.header-button {
  flex-shrink: 0;
  align-self: stretch;
  padding-right: 3.1875rem;
  padding-left: 3.1875rem;
  letter-spacing: 0.45px;
}

.header-button .button-icon {
  display: none;
}

.header-content {
  position: relative;
  padding-top: 9.375rem;
  color: #ffffff;
}

.header-title {
  max-width: 67.5rem;
  font-family: "Bebas Neue", sans-serif;
  font-size: 5rem;
  line-height: 1.2;
  font-weight: 400;
  margin: 1.875rem 0;
}

.header-text {
  max-width: 45rem;
  font-weight: 300;
  letter-spacing: 0.45px;
  margin-top: 0;
  margin-bottom: 3.125rem;
}

.features-slider {
  margin-top: 6.25rem;
}

.header-features {
  position: relative;
  display: flex;
  margin: 0;
  padding: 0;
  color: #fff;
  list-style: none;
}

.header-features-item {
  padding: 30px 49px;
  height: initial;
  border: 1px solid rgba(235, 235, 240, 0.2);
  border-bottom: none;
}

.header-feature-icon {
  margin-bottom: 20px;
}

.header-feature-text {
  margin: 0;
  font-weight: 300;
  letter-spacing: 0.45px;
}

.slider-buttons {
  display: none;
}

.slider-buttons button {
  flex-basis: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: transparent;
  border: none;
  padding: 10px;
  cursor: pointer;
  border: 1px solid rgba(235, 235, 240, 0.2);
  border-bottom: none;
}

.slider-buttons button:first-child {
  border-right: none;
}

.slider-buttons button svg {
  fill: #ffffff;
  transition: opacity 0.2s;
}

button.swiper-button-disabled svg {
  opacity: 0.4;
}

.step-button button {
  max-width: 60px;
  border: none;
  background-color: rgb(92, 142, 230);
}

/* Mobile menu */
.mobile-menu-toggle,
.mobile-menu {
  display: none;
}

/* Section */
section {
  padding-top: 9.375rem;
  padding-bottom: 9.375rem;
}

.section-light {
  background-color: rgb(250, 251, 252);
}

.section-title {
  font-family: "Bebas Neue", sans-serif;
  color: rgb(41, 45, 51);
  margin: 1.875rem 0 3.125rem;
}

.steps {
  display: flex;
  padding: 0;
  margin: 0;
  list-style: none;
}

.step-item {
  max-width: 330px;
}

.step-num {
  display: flex;
  align-items: center;
  font-family: "Bebas Neue", sans-serif;
  font-size: 3rem;
  line-height: 1.2;
  color: rgb(92, 142, 230);
  margin-bottom: 2.1875rem;
}

.step-num::after {
  content: "";
  height: 1px;
  background-color: rgb(235, 235, 240);
  width: 100%;
  display: inline-block;
  margin-left: 30px;
}

.step-item-title {
  letter-spacing: 0.2px;
  color: rgb(41, 45, 51);
  margin-top: 0;
  margin-bottom: 10px;
}

.step-item-text {
  margin: 0;
  line-height: 1.65;
  letter-spacing: 0.1px;
  color: rgb(130, 138, 153);
  padding-right: 1.875rem;
}

.step-link {
  display: flex;
  align-items: center;
  margin-top: 20px;
  font-weight: 600;
  font-size: 1rem;
  line-height: 1.6;
  letter-spacing: 0.3px;
  color: rgb(92, 142, 230);
  text-decoration: none;
}

.step-link::before {
  content: "";
  width: 40px;
  height: 1px;
  background-color: rgb(92, 142, 230);
  display: inline-block;
  margin-right: 20px;
}

@media (max-width: 1760px) {
  .header-phone {
    margin-right: 1.5625rem;
  }
  .header-nav {
    margin: 0 1.25rem;
  }
  .header-nav-item:not(:last-child) {
    margin-right: 1.5625rem;
  }
  .header-logo {
    padding-right: 1.5625rem;
    padding-left: 1.5625rem;
  }
}

@media (max-width: 1568px) {
  html {
    font-size: 14px;
  }
}

@media (max-width: 1350px) {
  html {
    font-size: 12px;
  }
  p {
    font-size: 14px;
  }
  h2 {
    font-size: 36px;
  }
  h3 {
    font-size: 20px;
  }
  .header-button {
    padding-right: 2.7rem;
    padding-left: 2.7rem;
  }
}

@media (max-width: 1200px) {
  .content {
    max-width: 80rem;
  }
  .navbar-logo {
    width: 7rem;
    height: 2rem;
  }
  .header-phone {
    display: none;
  }
  .slider-buttons {
    display: flex;
  }
  .step-button {
    justify-content: end;
    margin-top: 20px;
  }
}

@media (max-width: 992px) {
  .content {
    max-width: 70rem;
  }
  .header-nav {
    display: none;
  }
  .header-logo {
    flex-grow: 1;
    text-align: center;
    padding-top: 13px;
    padding-bottom: 13px;
    transition: padding 0.2s;
  }
  .navbar-light .header-logo {
    padding-top: 5px;
    padding-bottom: 5px;
  }
  .navbar-logo {
    width: 120px;
    height: 38px;
  }
  .header-button .button-text {
    display: none;
  }
  .header-button {
    width: 80px;
    padding: 22px;
    transition: padding 0.2s;
  }
  .navbar-light .header-button {
    padding-top: 12px;
    padding-bottom: 12px;
  }
  .header-button .button-icon {
    display: block;
    fill: #fff;
  }
  .mobile-menu-toggle {
    display: flex;
    flex-direction: column;
    padding: 22px;
    width: 80px;
    border-right: 1px solid rgba(235, 235, 240, 0.2);
    transition: padding 0.2s, border-color 0.2s;
  }
  .navbar-light .mobile-menu-toggle {
    padding-top: 12px;
    padding-bottom: 12px;
    border-color: rgb(235, 235, 240);
  }
  .mobile-menu-line {
    background-color: #fff;
    width: 24px;
    height: 1px;
    transition: transform 0.2s linear;
  }
  .mobile-menu-line:not(:last-child) {
    margin-bottom: 7px;
  }
  .mobile-menu-line:nth-child(2) {
    width: 18px;
    transition: opacity 0.2s linear;
  }
  .navbar-light .mobile-menu-line {
    background-color: rgb(41, 45, 51);
  }
  .btn-close .mobile-menu-line:nth-child(2) {
    opacity: 0;
  }
  .btn-close .mobile-menu-line:nth-child(1) {
    transform: rotate(45deg) translateY(5px) translateX(6.5px);
  }
  .btn-close .mobile-menu-line:nth-child(3) {
    transform: rotate(-45deg) translateY(-5px) translateX(6.5px);
  }
  .mobile-menu {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 2;
    overflow-y: auto;

    background-color: rgb(250, 251, 252);
    padding-top: 80px;
  }
  .mobile-menu.is-open {
    display: block;
  }
  .mobile-menu-nav {
    margin: 0;
    padding: 1.5rem;
    list-style: none;
    border-bottom: 1px solid rgb(235, 235, 240);
  }
  .mobile-menu-item:not(:last-child) {
    margin-bottom: 2.5rem;
  }
  .mobile-menu-link {
    font-weight: 700;
    font-size: 14px;
    line-height: 1.6;
    color: rgb(41, 45, 51);
    text-decoration: none;
  }
  .mobile-submenu {
    margin-top: 1.7rem;
    padding-left: 1.7rem;
    list-style: none;
  }
  .mobile-submenu-item {
    margin-bottom: 10px;
  }
  .mobile-menu-submenu-link {
    font-weight: 400;
    font-size: 14px;
    line-height: 1.6;
    color: rgb(130, 138, 153);
    text-decoration: none;
  }
  .mobile-menu-contact {
    padding: 15px;
    padding-top: 30px;
  }
  .mobile-menu-phone {
    display: block;
    font-weight: 600;
    font-size: 20px;
    line-height: 1.6;
    color: rgb(41, 45, 51);
    text-decoration: underline;
    margin-bottom: 20px;
  }
  .mobile-menu-contact-info {
    display: flex;
    align-items: center;
    margin-bottom: 10px;
  }
  .mobile-menu-contact-icon {
    margin-right: 10px;
  }
  .mobile-menu-contact-text {
    font-weight: 400;
    font-style: normal;
    font-size: 14px;
    line-height: 1.6;
    color: rgb(41, 45, 51);
    text-decoration: none;
  }
  .mobile-menu-social {
    margin-top: 20px;
  }
  .mobile-menu-social-icon {
    text-decoration: none;
    margin-right: 15px;
    display: inline-block;
  }
}

@media (max-width: 900px) {
  .content {
    max-width: 60rem;
  }
  .header-title {
    font-size: 4rem;
    margin-bottom: 0.9rem;
  }
  .header-content {
    padding-top: 6rem;
  }
}

@media (max-width: 768px) {
  .content {
    max-width: 45rem;
  }
  .header-content {
    padding-top: 4rem;
  }
}

@media (max-width: 576px) {
  .content {
    max-width: 100%;
    padding: 0 15px;
  }
  .content.no-padding {
    padding: 0;
  }
  section {
    padding-top: 100px;
  }
  .header-text {
    margin-bottom: 2.5rem;
  }
  .features-slider {
    margin-top: 50px;
    padding: 0 15px;
  }
  .header-features-item {
    max-width: 250px;
    padding: 20px 30px;
  }
  .features-buttons {
    margin: 0 -15px;
  }
  .slider-buttons button {
    border-right: none;
    border-left: none;
  }
  .slider-buttons button:last-child {
    border-left: 1px solid rgba(235, 235, 240, 0.2);
  }
  /* Step */
  .section-title {
    margin: 20px 0 30px;
  }
  .step-item {
    max-width: 300px;
  }
  .step-num {
    font-size: 48px;
    margin-bottom: 10px;
  }
  .step-item-text {
    padding-right: 0;
  }
  .step-link {
    margin-top: 25.5px;
    font-size: 14px;
  }
}

